--- a/www/index.html
+++ b/www/index.html
@@ -3,63 +3,36 @@
 <head>
 	<meta charset="utf-8" />
 	<meta content="width=device-width, initial-scale=1" name="viewport" />  
-	<style type="text/css">  
-		html {
-		  margin: 0;
-		  width: 100%;
-		  font: 11px/18px "Lucida Grande", "Helvetica Neue", sans-serif;
-		  -webkit-font-smoothing: antialiased;
-		}
-
+	<style type="text/css"> 
 		body {
-		  margin: 0;
-		  padding-left: 8px;
-		  padding-right: 8px;
-		  overflow-x: hidden;
-		  width: 558px;
-		  color: #8a9094;
+			margin: 0;
+			font: 11px/18px "Helvetica Neue", sans-serif;
+			color: #8a9094;
 		}
 
 		div {
-		  position: absolute;
-		  width: 100%;
-		  height: 80%;
-		  text-align: center;
+			position: absolute;
+			width: 100%;
+			height: 80%;
+			text-align: center;
 		}
 
 		div strong {
-		  display: block;
-		  font-size: 14px;
-		  font-weight: bold;
-		  position: absolute;
-		  top: 50%;
-		  left: 50%;
-		  width: 220px;
-		  margin-left: -110px;
+			display: block;
+			font-size: 14px;
+			font-weight: bold;
 		}
-
-		div p {
-		  width: 180px;
-		  position: absolute;
-		  top: 50%;
-		  left: 50%;
-		  padding-top: 120px;
-		  margin-left: -90px;
-		}
-
-		@media all and (-webkit-min-device-pixel-ratio: 2) {
-		  .not-found span {
-		    background-size: 150px 86px;
-		  }
-		}    
 	</style>  
-	<title>Hello, Plexi</title>
+	<title>plexi.http</title>
 </head>
 <body>  
 	<div>
 		<p>
-			<strong>Hello, Plexi!</strong>
-			<span></span>
+			<strong>PLEXI.HTTP</strong>
+			<span>
+				This page is initial page, config your plexi.json file according to <br/>
+				<a href="https://github.com/attrs/plexi.http" target="_blank">https://github.com/attrs/plexi.http</a>
+			</span>
 		</p>
 	</div>
 </body>
