--- a/www/index.html
+++ b/www/index.html
@@ -1,7 +1,22 @@
-<div flex flexbox="horizontal">
-	<div id="contents" flex flexbox>
-		<div flex flexbox align="center center">
-			plexi.http bundle index.html
-		</div>
-	</div>
-</div>
+<!DOCTYPE html>
+<html>
+<head>
+	<meta charset="utf-8" />
+	<title>plexi.http</title>
+	
+	<script>
+		window.onload = function() {
+			var anchor = document.querySelector('#admin');
+			anchor.href = 'http://' + location.hostname + ':19000';
+		}
+	</script>
+</head>
+<body>
+	<p>
+		이 페이지는 plexi.http 플러그인에 의해 자동으로 생성되었습니다.<br>
+		자세한 사용법은 <a href="http://attrs.github.io/plexi/">플렉시사이트의 문서</a>를 참조해주세요.<br>
+		<br>
+		<a href="#" id="admin">시스템관리자</a>에 접속해서 현재 서버의 상태를 조회하고 설정할 수 있습니다.
+	</p>
+</body>
+</html>
