--- a/www/index.html
+++ b/www/index.html
@@ -13,10 +13,8 @@
 </head>
 <body>
 	<p>
-		이 페이지는 plexi.http 플러그인에 의해 자동으로 생성되었습니다.<br>
-		자세한 사용법은 <a href="http://attrs.github.io/plexi/">플렉시사이트의 문서</a>를 참조해주세요.<br>
-		<br>
-		<a href="#" id="admin">시스템관리자</a>에 접속해서 현재 서버의 상태를 조회하고 설정할 수 있습니다.
+		plexi...
 	</p>
+	<a href="#" id="admin">system admin</a>
 </body>
 </html>
